# django-course-basic

./: .env.sample  README.md  TODO.md  pyproject.toml
adminapp/: forms.py  urls.py  views.py
adminapp/views/: create_views.py  delete_views.py  mixins.py  read_views.py  update_views.py
authapp/: forms.py  models.py  urls.py  views.py
authapp/migrations/: 0001_initial.py  0002_alter_shopuser_birth_date.py  0003_alter_shopuser_options.py  0004_auto_20211122_1726.py
backend/: settings.py  urls.py
backend/backend/: settings.py
basket/: context_processors.py  models.py  services.py  urls.py  views.py
basket/migrations/: 0001_initial.py  0002_auto_20211101_0614.py  0003_rename_basketproduct_basketitem.py
geekshop/: admin.py  apps.py  forms.py  models.py  services.py  slugifier.py  urls.py  views.py
geekshop/fixtures/: categories.json  products.json
geekshop/migrations/: 0001_initial.py  0002_alter_productcategory_slug.py  0003_alter_productcategory_slug.py  0004_alter_productcategory_slug.py  0005_auto_20211106_1409.py  0006_auto_20211106_1410.py  0007_auto_20211106_1413.py  0008_auto_20211106_1418.py  0009_alter_productcategory_products.py  0010_auto_20211109_2331.py  0011_auto_20211122_1726.py
index/: urls.py  views.py
news/: models.py  urls.py  views.py
news/fixtures/: news.json
news/migrations/: 0001_initial.py  0002_alter_article_slug.py
templates/: base.html
templates/authapp/: base.html  edit.html  login.html
templates/basket/: basket.html
templates/geekshop/: contact.html  index.html  (+3 more)
tmp/: basket.html  basket.js  task_2.js
(+34 files in other folders)
