[tool.poetry]
name = "django-course-basic"
version = "0.1.0"
description = ""
authors = ["lockorsa <lockorsa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.8"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
